--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,23 +1,16 @@
-# This workflow will build a Java project with Gradle
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
+image: Ubuntu  # образ для сборки
 
-name: Java CI with Gradle
+stack: jdk 11  # версия JDK
 
-on: [push]
+branches:
+  only:
+    - master  # ветка git
 
-jobs:
-  build:
+build: off  # будем использовать свой скрипт сборки
 
-    runs-on: ubuntu-latest
+install:
+  # запускаем SUT (& означает, что в фоновом режиме - не блокируем терминал для запуска тестов)
+  - java -jar ./artifacts/app-mbank.jar &
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-        distribution: 'adopt'
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
+build_script:
+  - ./gradlew test --info  # запускаем тест, флаг --info позволяет выводить больше информации
